traits1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
error[E0046]: not all trait items implemented, missing: `append_bar`
  --> src/lib.rs:16:1
   |
13 |     fn append_bar(self) -> Self;
   |     ---------------------------- `append_bar` from trait
...
16 | impl AppendBar for String {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ missing `append_bar` in implementation

For more information about this error, try `rustc --explain E0046`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
